ChangeLog

Name: William Lai
Date: 10-03-2013
Description: Implemented pawn promotion
    * src/StandardChessGame.java: Forgot about pawn promotion. It is now implemented.

Name: William Lai
Date: 10-02-2013
Description: Fixed knight check bug
    * src/StandardChessGame.java: Fixed bug that did not account for knight when resolving checks. Made isInWay function more robust to handle null piece and knights.

Name: William Lai
Date: 09-25-2013
Description: Finished game logic, started adding test functions
     * src/Board.java: Added removePiece function for en passant.
     * src/StandardChessGame.java: Added en passant logic. Started writing function to parse algebraic notation and make moves from them.

Name: Eric Du
Date: 09-23-2013
Description: Changed function names to keep consistency with program (getThreats, getMoves)
     * src/Board.java: Added clone function

Name: William Lai
Date: 09-23-2013
Description: Been a little while. More game logic, almost all done now.
     * src/King.java: Added castling as possible moves
     * src/Player.java: Fixed a silly comment typo
     * src/StandardChessGame.java: Finished off castling conditionals and implemented a checkmate check.

Name: William Lai
Date: 04-09-2013
Description: Added and fixed more game logic
     * src/Definitions.java: Added helper function flip for changing colors
     * src/StandardChessGame.java: Changed initial turn color to White, fixed isLegalMove function (at least for now), moved part of function to new helper function hasPieceInWay, created new helper function flipTurn, cleaned up and fixed some other code

Name: William Lai
Date: 04-07-2013
Description: Added some functions to aid in game logic
     * src/Bishop.java: Added threats function
     * src/King.java: Added threats function
     * src/Knight.java: Added threats function
     * src/Move.java: Overrode equals function of Object to allow Arraylist's contains method to work as intended